<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBECEC"
    android:backgroundTint="#FBECEC"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btalunoID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#6E0909"
            android:onClick="alunos"
            android:text="@string/btalunos"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btlivroID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#6E0909"
            android:onClick="livros"
            android:text="@string/btlivros"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btemprestimoID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#6E0909"
            android:onClick="emprestimos"
            android:text="@string/btempr_stimo"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btsairID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#6E0909"
            android:onClick="sair"
            android:text="@string/btsair" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>